--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@
 /node_modules
 /yarn-error.log
 
-# /public/assets     
+# /public/assets
 
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+.env
